(lang dune 3.8)

(name english_final)

(generate_opam_files true)

(source
 (github dev-gm/english-final))

(authors "Gavin M")

(maintainers "Gavin M")
;
;(license LICENSE)
;
;(documentation https://url/to/documentation)
;
;(package
; (name english_final)
; (synopsis "My English final")
; (description "My English final")
; (depends ocaml dune))
; (tags
;  (topics "to describe" your project)))
;
; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
